deploy/kubernetes_manifests/dummy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    target: dummy
    component: api
spec:
  selector:
    matchLabels:
      target: dummy
      component: api
  template:
    metadata:
      name: helloworld
      labels:
        target: dummy
        component: api
    spec:
      containers:
      - name: helloworld
        image: "traefik/whoami"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
