deploy/kubernetes_manifests/dummy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    target: dummy
    component: api
spec:
  selector:
    target: dummy
    component: api
  ports:
  - name: http
    port: 80
    protocol: TCP
