deploy/kubernetes_manifests/dummy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  labels:
    target: dummy
    component: api
spec:
  rules:
  - host: helloworld.localhost
    http:
      paths:
      - backend:
          service:
            name: helloworld
            port: 
              name: http
        path: /
        pathType: Prefix
